--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "scripts": {
     "start": "nodejs smitesession.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/messyfresh/SmiteSession.git"
+  }
   "dependencies": {
     "MD5": "~1.2.1",
     "node-schedule": "~0.1.16",
