--- a/package.json
+++ b/package.json
@@ -3,16 +3,13 @@
   "version": "0.0.1",
   "description": "Generates a Smite API Session ID every 10 minutes and pushes it to a MongoDB",
   "author": "Scott Nix <messyfresh@gmail.com>",
-  "main": "smitesession.js",
+  "main": "smite-session.js",
   "bin": {
-    "smitesession": "./smitesession"
-  },
-  "scripts": {
-    "start": "nodejs smitesession.js"
+    "smite-session": "./smite-session"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/messyfresh/SmiteSession.git"
+    "url": "https://github.com/messyfresh/smite-session.git"
   },
   "dependencies": {
     "MD5": "~1.2.1",
